# nrf52

./: .gitmodules  CMakeLists.txt  README.md  dont-create-zephyr-flash-and-debug-targets.patch  main.cpp  prj.conf
.github/workflows/: build.yml
cmake/debug-probes/: jlink.cmake  openocd.cmake
